--- a/application.properties
+++ b/application.properties
@@ -5,3 +5,5 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 
 eureka.instance.instance-id=${spring.application.name}:${random.value}
+
+spring.config.import=optional:configserver:http://localhost:8888
